# Skabelon

./: Cargo.toml  LICENSE  README.md  grammar.md
.github/workflows/: publish.yml
src/: engine.rs  lib.rs  nodes.rs  parser.rs  templates.rs
templates/: main.html
tests/: glob_loading.rs  integration_tests.rs
tests/syntax/: arrays.rs  conditions.rs  defer.rs  include.rs  loops.rs  mod.rs  objects.rs
tests/templates/: expected.html  main.html  partial1.html  partial2.html  partial3.html
