[package]
name = "skabelon"
version = "0.1.18"
edition = "2024"
description = "Simple templating engine for rust using angular syntax"
license = "MIT"
repository = "https://github.com/sofusa/skabelon"

[dependencies]
serde = "1"
serde_json = "1"
glob = "0.3"
pathdiff = "0.2"

[dev-dependencies]
tempfile = "3"
